--- a/cv/templates/public/css/main.css
+++ b/cv/templates/public/css/main.css
@@ -1,18 +1,30 @@
-html {
-    box-sizing: border-box;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-}
-*, *:before, *:after {
-    box-sizing: inherit;
+/*----------------------------------------------------------------------*/
+/* Global Styles */
+/*----------------------------------------------------------------------*/
+
+/* import compartmentalized CSS scripts */
+@import "background.css";
+@import "home.css";
+@import "nav.css";
+
+
+
+body, input, select, textarea {
+    color: #ffffff;
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 300;
+    font-size: 1rem;
+    line-height: 1.65;
 }
 
 body {
-    margin: 0;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background-color: #1b1f22;
 }
 
-h1, h2, h3, h4, h5, h6, p, ul {
-    margin: 0;
-    padding: 0;
+
+@media screen and (max-width: 1680px) {
+    #wrapper {
+        padding: 3rem 2rem;
+    }
 }
+
