--- a/cv/templates/static/base.html
+++ b/cv/templates/static/base.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="public/css/main.css">
         <!-- FontAwesome -->
         <script src="https://use.fontawesome.com/9b3bd4052a.js"></script>
+        <!-- Site Font -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600">
         <!-- Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102573800-3"></script>
         <script>
