--- a/cv/templates/public/css/main.css
+++ b/cv/templates/public/css/main.css
@@ -1,13 +1,23 @@
 /*----------------------------------------------------------------------*/
-/* Global Styles */
+/* Main Styles */
 /*----------------------------------------------------------------------*/
 
 /* import compartmentalized CSS scripts */
+@import "global.css";
 @import "background.css";
 @import "home.css";
 @import "nav.css";
+@import "subpage.css";
+@import "about.css";
+@import "cv.css";
+@import "projects.css";
 
 
+/* Ensure we've got a scrollable area above the background */
+#content > div {
+    overflow: auto;
+    height: 100%;
+}
 
 body, input, select, textarea {
     color: #ffffff;
@@ -21,10 +31,90 @@ body {
     background-color: #1b1f22;
 }
 
+.wrapper header:not(.topBar) {
+    padding: 4rem 2rem;
+}
 
 @media screen and (max-width: 1680px) {
-    #wrapper {
+    .wrapper header:not(.topBar) {
         padding: 3rem 2rem;
     }
 }
 
+h1, h2, h3, h4, h5, h6 {
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 0.2rem;
+    line-height: 1.5rem;
+    margin: 0 0 1rem 0;
+}
+
+h1 {
+    font-size: 2.25rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+    line-height: 1.4;
+    letter-spacing: 0.5rem;
+}
+
+h3 {
+    font-size: 1rem;
+}
+
+h4 {
+    font-size: 0.8rem;
+}
+
+h5 {
+    font-size: 0.7rem;
+}
+
+h6 {
+    font-size: 0.6rem;
+}
+
+.minor {
+    padding-bottom: 0;
+    border-bottom: dotted 1px #fff;
+    width: max-content;
+}
+
+.justify {
+    text-align: justify;
+}
+
+
+/* Quote stuff */
+blockquote {
+    border-left: solid 4px #ffffff;
+    margin: 0 0 2rem 0;
+    padding: 0.5rem 0 0.5rem 2rem;
+}
+
+blockquote span {
+    display: block;
+}
+
+blockquote span.quote-txt {
+    color: var(--txt-ylw);
+    font-style: italic;
+}
+
+blockquote span.quote-author {
+    font-weight: 600;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+  background: #404040;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+/* Scroll buttons */
+::-webkit-scrollbar-button {
+    background: #404040;
+}
