--- a/cv/templates/public/css/nav.css
+++ b/cv/templates/public/css/nav.css
@@ -2,11 +2,28 @@
 /* Navigation Styles */
 /*----------------------------------------------------------------------*/
 
-#header nav {
+header nav {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-#header nav ul {
+header.topBar {
+    display: inline-block;
+    position: fixed;
+    left: 50%;
+    top: 1rem;
+    z-index: 2;
+}
+
+header nav.topNav {
+    width: 360px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+header nav ul {
     display: -moz-flex;
     display: -webkit-flex;
     display: -ms-flex;
@@ -14,37 +31,83 @@
     margin-bottom: 0;
     list-style: none;
     padding-left: 0;
+}
+
+nav.mainNav ul {
     border: solid 1px #ffffff;
     border-radius: 4px;
 }
 
-#header nav ul li:first-child {
+nav.topNav ul {
+}
+
+header nav ul li:first-child {
     border-left: 0;
 }
 
-#header nav ul li {
+header nav ul li {
     padding-left: 0;
+    border-left: solid 1px #444;
+}
+
+header nav.mainNav ul li {
     border-left: solid 1px #ffffff;
 }
 
-#header nav ul li:hover {
+header nav.topNav ul li {
+    width: 60px;
+}
+
+header nav ul li:hover {
     transition: ease-in-out 0.3s;
     background-color: rgba(0, 0, 0, 0.8);
 }
+nav.topNav ul li:first-child:hover {
+    border-bottom-left-radius: 10px;
+}
+nav.topNav ul li:last-child:hover {
+    border-bottom-right-radius: 10px;
+}
 
-#header nav ul li a {
+header nav ul li a {
     display: block;
-    min-width: 7.5rem;
-    height: 2.75rem;
-    line-height: 2.75rem;
-    padding: 0 1.25rem 0 1.45rem;
     text-transform: uppercase;
-    letter-spacing: 0.2rem;
-    font-size: 0.8rem;
     border-bottom: 0;
 }
 
-#header nav ul li a:hover {
+header nav.mainNav ul li a {
+    letter-spacing: 0.2rem;
+    height: 2.75rem;
+    min-width: 7.5rem;
+    line-height: 2.75rem;
+    font-size: 0.8rem;
+    padding: 0 1.25rem 0 1.45rem;
+}
+
+header nav.topNav ul li a {
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+header nav ul li a:hover {
     text-decoration: none;
-    color: #57BC90;
+    color: var(--txt-grn);
+}
+
+/* Tooltip customization */
+nav.topNav ul li a div.__react_component_tooltip {
+    font-size: 10px;
+    padding: 4px 13px;
+    background-color: #3a3a3a9e;
+}
+
+nav.topNav ul li a div.__react_component_tooltip.type-dark {
+    color: var(--txt-grn);
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+}
+
+.__react_component_tooltip.type-dark.place-bottom:after {
+    border-bottom-color: #3a3a3a9e;
 }
