Add Contact section

--- a/cv/templates/public/css/main.css
+++ b/cv/templates/public/css/main.css
@@ -11,6 +11,7 @@
 @import "about.css";
 @import "cv.css";
 @import "projects.css";
+@import "contact.css";
 
 
 /* Ensure we've got a scrollable area above the background */
