Add Slack Events API stuff

--- a/cv/templates/static/okr_base.html
+++ b/cv/templates/static/okr_base.html
@@ -21,7 +21,8 @@
         {% endblock %}
     </head>
     <body>
-        <div id="content" />
-        <script src="public/bundle.js" type="text/javascript"></script>
+        <div>
+            OKR
+        </div>
     </body>
 </html>
